feature-2 доработка Кафки